# math_search_win

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  generate_activation_code.py  release_tool.py  run-debug.ps1  run-dev.ps1  run-release.ps1  run_activation.bat
app_resources/detail/: detail.css  detail.js  detail_template.html
app_resources/katex/: README
docs/: activation_upgrade_ui_refactor_round1_summary.md  architecture.md  architecture_review_checklist.md  detail_content_visual_enhancement_round4_summary.md  favorites_ui_refactor_round2_summary.md  handover_guide.md  home_page_refactor_round1_summary.md  light_license_v2_handover.md  local_storage_mvp_round_summary.md  module_map.md  recent_searches_ui_refactor_round1_summary.md  runtime_flow.md  search_workbench_ui_refactor_round1_summary.md  settings_about_ui_upgrade_round1_summary.md  system_architecture.md  test_matrix.md  ui_shared_style_refactor_round1_summary.md
resources/detail/: detail.css  detail.js  detail_template.html
src/: main.cpp
src/core/logging/: log_categories.h  logger.cpp  logger.h
src/domain/adapters/: conclusion_card_adapter.cpp  conclusion_card_adapter.h  conclusion_detail_adapter.cpp  conclusion_detail_adapter.h
src/domain/models/: app_settings.cpp  app_settings.h  conclusion_record.cpp  conclusion_record.h  render_section.cpp  render_section.h  search_history_item.h  search_index_models.cpp  search_index_models.h  search_result_models.cpp  search_result_models.h
src/domain/repositories/: favorites_repository.cpp  favorites_repository.h  history_repository.cpp  history_repository.h  settings_repository.cpp  settings_repository.h
src/domain/services/: search_service.cpp  search_service.h  suggest_service.cpp  suggest_service.h
src/infrastructure/data/: backend_search_index_loader.cpp  backend_search_index_loader.h  canonical_content_loader.cpp  canonical_content_loader.h  conclusion_content_repository.cpp  conclusion_content_repository.h  conclusion_index_repository.cpp  conclusion_index_repository.h
src/infrastructure/storage/: local_storage_service.cpp  local_storage_service.h
src/license/: activation_code_service.cpp  activation_code_service.h  device_fingerprint_service.cpp  device_fingerprint_service.h  feature_gate.cpp  feature_gate.h  license_service.cpp  license_service.h  license_state.cpp  license_state.h
src/shared/: constants.h  paths.cpp  paths.h
src/ui/: main_window.cpp  main_window.h
src/ui/detail/: detail_fallback_content_builder.cpp  detail_fallback_content_builder.h  detail_html_renderer.cpp  detail_html_renderer.h  detail_pane.cpp  detail_pane.h  detail_perf_aggregator.cpp  detail_perf_aggregator.h  detail_render_coordinator.cpp  detail_render_coordinator.h  detail_render_path_resolver.cpp  detail_render_path_resolver.h  detail_view_data_mapper.cpp  detail_view_data_mapper.h
src/ui/pages/: activation_page.cpp  activation_page.h  favorites_page.cpp  favorites_page.h  home_page.cpp  home_page.h  recent_searches_page.cpp  recent_searches_page.h  search_page.cpp  search_page.h  settings_page.cpp  settings_page.h
src/ui/style/: app.qss  app_style.cpp  app_style.h
src/ui/widgets/: bottom_status_bar.cpp  bottom_status_bar.h  navigation_sidebar.cpp  navigation_sidebar.h  recent_search_item_widget.cpp  recent_search_item_widget.h  top_bar.cpp  top_bar.h
src/ui/widgets/favorites/: favorite_item_card.cpp  favorite_item_card.h
tests/: CMakeLists.txt  README.md
tests/activation/: test_activation_code_service.cpp  test_activation_page.cpp  test_feature_gate.cpp  test_license_service.cpp
tests/detail/: test_detail_perf_aggregator.cpp  test_detail_rendering_chain.cpp
tests/fixtures/: test_backend_search_index.json  test_backend_search_index_malformed.json  test_backend_search_index_round2.json
tests/repository/: test_conclusion_index_repository.cpp
tests/search/: test_search_service.cpp
tests/shared/: test_dump_utils.h  test_fixture_loader.cpp  test_fixture_loader.h
tests/storage/: test_local_storage_repositories.cpp
tests/suggest/: test_suggest_service.cpp
tests/ui/: test_main_window_round5.cpp  test_page_wiring.cpp  test_search_page_round5.cpp  test_settings_activation_round5.cpp
